--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
     "files.associations": {
-        "iostream": "cpp",
-        "iosfwd": "cpp",
-        "ostream": "cpp",
-        "new": "cpp",
-        "fstream": "cpp"
+        "iostream": "cpp"
     }
 }
